force-app/main/default/objects/ssot__Lead__dlm/fields/cdp_crm_dk1__rel_1697796245597_end__c.field-meta.xml
<CustomField>
    <fullName>cdp_crm_dk1__rel_1697796245597_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_PhoneContactPointId_map_ssot_Id_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>ssot_PhoneContactPointId_map_ssot_Id_rel</relationshipLabel>
    <relationshipName>rel_1697796245597_end</relationshipName>
    <type>Lookup</type>
</CustomField>