force-app/main/default/objects/ssot__Lead__dlm/fields/cdp_crm_dk1__rel_1697796246210_end__c.field-meta.xml
<CustomField>
    <fullName>cdp_crm_dk1__rel_1697796246210_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_ConvertedToAccountId_map_ssot_I_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ssot_ConvertedToAccountId_map_ssot_I_rel</relationshipLabel>
    <relationshipName>rel_1697796246210_end</relationshipName>
    <type>Lookup</type>
</CustomField>